// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSwitcherPanel /> Applications without a name or url should not be renderered should render correctly 1`] = `
<WithStyles(AppSwitcherPanel)
  applications={
    Array [
      Object {
        "description": "Mock App 1 Description",
        "iconUrl": "http://mockapp1/icon",
        "id": "app-1",
        "name": "Mock App 1 - VALID",
        "target": "_top",
        "url": "http://mockapp1/",
      },
      Object {
        "description": "Mock App 2 Description",
        "iconUrl": "http://mockapp2/icon",
        "id": "app-2",
        "target": "_blank",
        "url": "http://mockapp2/",
      },
      Object {
        "description": "Mock App 3 Description",
        "iconUrl": "http://mockapp3/icon",
        "id": "app-3",
        "name": "Mock App 3",
      },
      Object {
        "description": "Mock App 4 Description",
        "iconUrl": "http://mockapp4/icon",
        "id": "app-4",
      },
      Object {
        "iconUrl": "http://mockapp5/icon",
        "id": "app-5",
        "name": "Mock App 5 - VALID without description",
        "url": "http://mockapp5/",
      },
    ]
  }
  isOpen={true}
  title="Mock title"
>
  <AppSwitcherPanel
    applications={
      Array [
        Object {
          "description": "Mock App 1 Description",
          "iconUrl": "http://mockapp1/icon",
          "id": "app-1",
          "name": "Mock App 1 - VALID",
          "target": "_top",
          "url": "http://mockapp1/",
        },
        Object {
          "description": "Mock App 2 Description",
          "iconUrl": "http://mockapp2/icon",
          "id": "app-2",
          "target": "_blank",
          "url": "http://mockapp2/",
        },
        Object {
          "description": "Mock App 3 Description",
          "iconUrl": "http://mockapp3/icon",
          "id": "app-3",
          "name": "Mock App 3",
        },
        Object {
          "description": "Mock App 4 Description",
          "iconUrl": "http://mockapp4/icon",
          "id": "app-4",
        },
        Object {
          "iconUrl": "http://mockapp5/icon",
          "id": "app-5",
          "name": "Mock App 5 - VALID without description",
          "url": "http://mockapp5/",
        },
      ]
    }
    classes={
      Object {
        "actionsContainer": "AppSwitcherPanel-actionsContainer-6",
        "footerContainer": "AppSwitcherPanel-footerContainer-7",
        "headerContainer": "AppSwitcherPanel-headerContainer-3",
        "open": "AppSwitcherPanel-open-2",
        "root": "AppSwitcherPanel-root-1",
        "title": "AppSwitcherPanel-title-5",
        "titleContainer": "AppSwitcherPanel-titleContainer-4",
      }
    }
    isActionSelectedCallback={[Function]}
    isOpen={true}
    onActionClickedCallback={[Function]}
    title="Mock title"
  >
    <div
      className="AppSwitcherPanel-root-1 AppSwitcherPanel-open-2"
      id="hv-appswitcherpanel-6"
    >
      <div
        className="AppSwitcherPanel-headerContainer-3"
      >
        <div
          className="AppSwitcherPanel-titleContainer-4"
        >
          <div
            className="AppSwitcherPanel-title-5"
            title="Mock title"
          >
            Mock title
          </div>
        </div>
      </div>
      <div
        className="AppSwitcherPanel-actionsContainer-6"
      >
        <WithStyles(Action)
          application={
            Object {
              "description": "Mock App 1 Description",
              "iconUrl": "http://mockapp1/icon",
              "id": "app-1",
              "name": "Mock App 1 - VALID",
              "target": "_top",
              "url": "http://mockapp1/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp1/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "description": "Mock App 1 Description",
                "iconUrl": "http://mockapp1/icon",
                "id": "app-1",
                "name": "Mock App 1 - VALID",
                "target": "_top",
                "url": "http://mockapp1/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-10",
                "iconInfo": "Action-iconInfo-12",
                "iconUrl": "Action-iconUrl-13",
                "link": "Action-link-11",
                "selected": "Action-selected-9",
                "typography": "Action-typography-8",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-11"
              href="http://mockapp1/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-8"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-8"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-8 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-13"
                      onError={[Function]}
                      src="http://mockapp1/icon"
                    />
                    <span
                      title="Mock App 1 - VALID"
                    >
                      Mock App 1 - VALID
                    </span>
                    <Info
                      className="Action-iconInfo-12"
                      title="Mock App 1 Description"
                    >
                      <HvIconBase
                        className="Action-iconInfo-12"
                        iconSize="S"
                        name="Info"
                        title="Mock App 1 Description"
                      >
                        <div
                          className="Action-iconInfo-12 HvIconBase-root HvIconBase-s"
                          name="Info"
                          title="Mock App 1 Description"
                        >
                          <svg
                            focusable={false}
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              className="color0"
                              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </HvIconBase>
                    </Info>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
        <WithStyles(Action)
          application={
            Object {
              "iconUrl": "http://mockapp5/icon",
              "id": "app-5",
              "name": "Mock App 5 - VALID without description",
              "url": "http://mockapp5/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp5/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "iconUrl": "http://mockapp5/icon",
                "id": "app-5",
                "name": "Mock App 5 - VALID without description",
                "url": "http://mockapp5/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-10",
                "iconInfo": "Action-iconInfo-12",
                "iconUrl": "Action-iconUrl-13",
                "link": "Action-link-11",
                "selected": "Action-selected-9",
                "typography": "Action-typography-8",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-11"
              href="http://mockapp5/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-8"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-8"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-8 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-13"
                      onError={[Function]}
                      src="http://mockapp5/icon"
                    />
                    <span
                      title="Mock App 5 - VALID without description"
                    >
                      Mock App 5 - VALID without description
                    </span>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
      </div>
    </div>
  </AppSwitcherPanel>
</WithStyles(AppSwitcherPanel)>
`;

exports[`<AppSwitcherPanel /> with minimum configuration should render correctly 1`] = `
<WithStyles(AppSwitcherPanel)
  applications={
    Array [
      Object {
        "iconUrl": "http://mockapp1/icon",
        "id": "app-1",
        "name": "Mock App 1",
        "target": "_top",
        "url": "http://mockapp1/",
      },
      Object {
        "description": "Mock App 2 Description",
        "iconUrl": "http://mockapp2/icon",
        "id": "app-2",
        "name": "Mock App 2",
        "target": "_blank",
        "url": "http://mockapp2/",
      },
      Object {
        "description": "Mock App 2 Description",
        "iconUrl": "http://mockapp2/icon",
        "id": "app-3",
        "name": "Mock App 3",
        "url": "http://mockapp2/",
      },
    ]
  }
  isOpen={true}
  title="Mock title"
>
  <AppSwitcherPanel
    applications={
      Array [
        Object {
          "iconUrl": "http://mockapp1/icon",
          "id": "app-1",
          "name": "Mock App 1",
          "target": "_top",
          "url": "http://mockapp1/",
        },
        Object {
          "description": "Mock App 2 Description",
          "iconUrl": "http://mockapp2/icon",
          "id": "app-2",
          "name": "Mock App 2",
          "target": "_blank",
          "url": "http://mockapp2/",
        },
        Object {
          "description": "Mock App 2 Description",
          "iconUrl": "http://mockapp2/icon",
          "id": "app-3",
          "name": "Mock App 3",
          "url": "http://mockapp2/",
        },
      ]
    }
    classes={
      Object {
        "actionsContainer": "AppSwitcherPanel-actionsContainer-6",
        "footerContainer": "AppSwitcherPanel-footerContainer-7",
        "headerContainer": "AppSwitcherPanel-headerContainer-3",
        "open": "AppSwitcherPanel-open-2",
        "root": "AppSwitcherPanel-root-1",
        "title": "AppSwitcherPanel-title-5",
        "titleContainer": "AppSwitcherPanel-titleContainer-4",
      }
    }
    isActionSelectedCallback={[Function]}
    isOpen={true}
    onActionClickedCallback={[Function]}
    title="Mock title"
  >
    <div
      className="AppSwitcherPanel-root-1 AppSwitcherPanel-open-2"
      id="hv-appswitcherpanel-2"
    >
      <div
        className="AppSwitcherPanel-headerContainer-3"
      >
        <div
          className="AppSwitcherPanel-titleContainer-4"
        >
          <div
            className="AppSwitcherPanel-title-5"
            title="Mock title"
          >
            Mock title
          </div>
        </div>
      </div>
      <div
        className="AppSwitcherPanel-actionsContainer-6"
      >
        <WithStyles(Action)
          application={
            Object {
              "iconUrl": "http://mockapp1/icon",
              "id": "app-1",
              "name": "Mock App 1",
              "target": "_top",
              "url": "http://mockapp1/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp1/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "iconUrl": "http://mockapp1/icon",
                "id": "app-1",
                "name": "Mock App 1",
                "target": "_top",
                "url": "http://mockapp1/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-10",
                "iconInfo": "Action-iconInfo-12",
                "iconUrl": "Action-iconUrl-13",
                "link": "Action-link-11",
                "selected": "Action-selected-9",
                "typography": "Action-typography-8",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-11"
              href="http://mockapp1/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-8"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-8"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-8 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-13"
                      onError={[Function]}
                      src="http://mockapp1/icon"
                    />
                    <span
                      title="Mock App 1"
                    >
                      Mock App 1
                    </span>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
        <WithStyles(Action)
          application={
            Object {
              "description": "Mock App 2 Description",
              "iconUrl": "http://mockapp2/icon",
              "id": "app-2",
              "name": "Mock App 2",
              "target": "_blank",
              "url": "http://mockapp2/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp2/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "description": "Mock App 2 Description",
                "iconUrl": "http://mockapp2/icon",
                "id": "app-2",
                "name": "Mock App 2",
                "target": "_blank",
                "url": "http://mockapp2/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-10",
                "iconInfo": "Action-iconInfo-12",
                "iconUrl": "Action-iconUrl-13",
                "link": "Action-link-11",
                "selected": "Action-selected-9",
                "typography": "Action-typography-8",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-11"
              href="http://mockapp2/"
              target="_blank"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-8"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-8"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-8 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-13"
                      onError={[Function]}
                      src="http://mockapp2/icon"
                    />
                    <span
                      title="Mock App 2"
                    >
                      Mock App 2
                    </span>
                    <Info
                      className="Action-iconInfo-12"
                      title="Mock App 2 Description"
                    >
                      <HvIconBase
                        className="Action-iconInfo-12"
                        iconSize="S"
                        name="Info"
                        title="Mock App 2 Description"
                      >
                        <div
                          className="Action-iconInfo-12 HvIconBase-root HvIconBase-s"
                          name="Info"
                          title="Mock App 2 Description"
                        >
                          <svg
                            focusable={false}
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              className="color0"
                              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </HvIconBase>
                    </Info>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
        <WithStyles(Action)
          application={
            Object {
              "description": "Mock App 2 Description",
              "iconUrl": "http://mockapp2/icon",
              "id": "app-3",
              "name": "Mock App 3",
              "url": "http://mockapp2/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp2/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "description": "Mock App 2 Description",
                "iconUrl": "http://mockapp2/icon",
                "id": "app-3",
                "name": "Mock App 3",
                "url": "http://mockapp2/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-10",
                "iconInfo": "Action-iconInfo-12",
                "iconUrl": "Action-iconUrl-13",
                "link": "Action-link-11",
                "selected": "Action-selected-9",
                "typography": "Action-typography-8",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-11"
              href="http://mockapp2/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-8"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-8"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-8 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-13"
                      onError={[Function]}
                      src="http://mockapp2/icon"
                    />
                    <span
                      title="Mock App 3"
                    >
                      Mock App 3
                    </span>
                    <Info
                      className="Action-iconInfo-12"
                      title="Mock App 2 Description"
                    >
                      <HvIconBase
                        className="Action-iconInfo-12"
                        iconSize="S"
                        name="Info"
                        title="Mock App 2 Description"
                      >
                        <div
                          className="Action-iconInfo-12 HvIconBase-root HvIconBase-s"
                          name="Info"
                          title="Mock App 2 Description"
                        >
                          <svg
                            focusable={false}
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              className="color0"
                              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </HvIconBase>
                    </Info>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
      </div>
    </div>
  </AppSwitcherPanel>
</WithStyles(AppSwitcherPanel)>
`;
